update to new cloud-native-demo image in dockerhub

--- a/k8s/app/deployment.yaml
+++ b/k8s/app/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         run: cloud-native-demo
     spec:
       containers:
-      - image: cloud-native-demo:1
+      - image: javaplus/cloud-native-demo:1
         imagePullPolicy: IfNotPresent
         name: cloud-native-demo
         env:
