--- a/k8s/app-envvars/deployment-with-envvars.yaml
+++ b/k8s/app-envvars/deployment-with-envvars.yaml
@@ -15,7 +15,7 @@ spec:
         run: cn-demo
     spec:
       containers:
-      - image: cloud-native-demo:1
+      - image: javaplus/cloud-native-demo:1
         imagePullPolicy: IfNotPresent
         name: cn-demo
         env:
