--- a/k8s/app-health/ingress.yaml
+++ b/k8s/app-health/ingress.yaml
@@ -1,14 +1,18 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: cn-demo
   annotations:
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
   - http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: cn-demo
-          servicePort: 5000
+          service:
+            name: cn-demo
+            port:
+              number: 5000
