--- a/k8s/app-configmaps/app.properties
+++ b/k8s/app-configmaps/app.properties
@@ -1,6 +1,3 @@
-# Comment line at the top
-USER_DEFINED_2=my-user-define-value-2
-USER_DEFINED_3=my-user-define-value-3
-USER_DEFINED_4="Quoted-value"
-
-# Comment line at the bottom
+cm.user_defined_1=my-user-defined-value-1
+cm.user_defined_2=my-user-defined-value-2
+cm.user_defined_3=my-user-defined-value-3
